src/objects/S3DocumentSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>apiVersion__c</fullName>
        <label>API version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entrence__c</fullName>
        <label>Entrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resources__c</fullName>
        <label>Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>S3Document Setting</label>
</CustomObject>